stable version 0.0.2